fixed bug with line alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body {
     height: 100vh;
     width: 100%;
     font-family: 'Roboto', sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 svg {
